# CP-CA

CP-ADCA/IF-SPECK32-K64/Affine-Degree2/: README.md
CP-ADCA/IF-SPECK32-K64/Affine-Degree2/test/: white_box_arx.c
CP-ADCA/IF-SPECK32-K64/Quadratic-Degree2/: README.md
CP-ADCA/IF-SPECK32-K64/Quadratic-Degree2/test/: white_box_arx.c
CP-ADCA/IF-SPECK32-K64/Quadratic-Degree3/: README.md
CP-ADCA/IF-SPECK32-K64/Quadratic-Degree3/test/: white_box_arx.c
CP-ADCA/IF-SPECK32-K64/Quadratic-Degree4/: CMakeLists.txt  README.md
CP-ADCA/IF-SPECK32-K64/Quadratic-Degree4/test/: white_box_arx.c
CP-ADCA/SE-SPECK32-K64/: README.md  default_white_box_speck_32_K64.c
CP-ADCA/SE-SPECK48-K96/: README.md  default_white_box_speck_48_K96.c
CP-ADCA/Simulation/: CMakeLists.txt  README.md
CP-ADCA/Simulation/include/: wbspeck.h
CP-ADCA/Simulation/src/: wbspeck.c
CP-ADCA/Simulation/test/: attack.c
CP-DCA/IF-SPECK32-K64/Affine-Degree2/test/: white_box_arx.c
CP-DCA/IF-SPECK32-K64/Quadratic-Degree2/: README.md
CP-DCA/IF-SPECK32-K64/Quadratic-Degree2/test/: white_box_arx.c
CP-DCA/IF-SPECK32-K64/Quadratic-Degree3/: README.md
CP-DCA/IF-SPECK32-K64/Quadratic-Degree3/test/: white_box_arx.c
CP-DCA/IF-SPECK32-K64/Quadratic-Degree4/: README.md
CP-DCA/SE-SPECK32-K64/: README.md  default_white_box_speck_32_K64.c
CP-DCA/SE-SPECK48-K96/: README.md  default_white_box_speck_48_K96.c
CP-DCA/Simulation/: CMakeLists.txt  README.md
CP-DCA/Simulation/include/: wbspeck.h
CP-DCA/Simulation/src/: wbspeck.c
CP-DCA/Simulation/test/: attack.c
(+1 files in other folders)
